--- a/README.adoc
+++ b/README.adoc
@@ -3091,7 +3091,6 @@ exec xset b off
 # TODO: Read stdin?
 # TODO: report-missing-executables
 # TODO: Declarative configuration?
-# TODO: Remove constructEnrichedPathCmd
 
 # TODO: Samples
 # dispatch-action 'ssh://<foobar>!' 'w'
@@ -3137,50 +3136,9 @@ proc splitString {text str {startIndex 0}} {
     }
 }
 
-#
-# a         → a
-# a b       → a b
-# a/b       → enrich-path a - b
-# a/b c     → enrich-path a - b c
-# a/b/c     → enrich-path a b - c
-# a/b/c d   → enrich-path a b - c d
-# a/b/c d e → enrich-path a b - c d e
-# /a        → /a
-# /a b      → /a b
-# Constraint: cmd is trimmed
-#
 proc constructEnrichedPathCmd {cmd} {
-    set cmd [string trim $cmd]
-
-    if {[string index $cmd 0] eq "/"} {
-        return $cmd
-    }
-
-    set firstSpacePos [string first " " $cmd]
-    if {$firstSpacePos == -1} {
-        set firstSpacePos [string length $cmd]
-    }
-
-    set firstElement [string range $cmd 0 [expr {$firstSpacePos - 1}]]
-    set rest [string range $cmd [expr {$firstSpacePos + 1}] end]
-    set paths [split $firstElement /]
-    if {[llength $paths] == 1} {
-        return $cmd
-    } else {
-        set prefixes [lrange $paths 0 end-1]
-        set executable [lindex $paths end]
-        return [join [list "enrich-path" {*}$prefixes "-" $executable {*}$rest] " "]
-    }
+    return "deep-exec $cmd"
 }
-# puts [constructEnrichedPathCmd {a}]
-# puts [constructEnrichedPathCmd {a b}]
-# puts [constructEnrichedPathCmd {a/b}]
-# puts [constructEnrichedPathCmd {a/b c}]
-# puts [constructEnrichedPathCmd {a/b/c}]
-# puts [constructEnrichedPathCmd {a/b/c d}]
-# puts [constructEnrichedPathCmd {a/b/c d e}]
-# puts [constructEnrichedPathCmd {/a}]
-# puts [constructEnrichedPathCmd {/a b}]
 
 proc copyToClipboard {text} {
     set fd [open "| xsel -b" w]
@@ -3323,7 +3281,7 @@ if {$text ne ""} {
             set parts [splitString $text "!"]
 
             set hostExpr [string trim [substEnvVars [lindex $parts 0]]]
-            set cmd [constructEnrichedPathCmd [lindex $parts 1]]
+            set cmd [lindex $parts 1]
 
             execl ssh [list $hostExpr {*}$cmd]
         }
@@ -3372,7 +3330,8 @@ if {$text ne ""} {
         }
         "!!*" {
             set cmd [constructEnrichedPathCmd [stripPrefix $text {!!}]]
-            execl with-env-user [list with-term-emu-sh --pause-after-exec - $cmd]
+            # set cmd [stripPrefix $text {!!}]
+            execl with-env-user [list with-term-emu-sh --pause-after-exec - "deep-exec $cmd"]
         }
         "tmux :: *" {
             set tmuxSessionName [string trim [stripPrefix $text "tmux :: "]]
