feat: deep-exec fails if exec doesn't exist

--- a/README.adoc
+++ b/README.adoc
@@ -5517,6 +5517,11 @@ TODO: Help text
 exec_path_=$(get-exec "$1")
 shift 1
 
+if [ "${exec_path_}" = "" ]; then
+    echo "Error: $1 not found" >&2
+    exit 1
+fi
+
 exec "${exec_path_}" "$@"
 
 ----
