feat: find-deep-path should exist with non-zero exit code if not found

--- a/README.adoc
+++ b/README.adoc
@@ -3767,7 +3767,14 @@ if {$::argc != 1} {
     exit 1
 }
 
-puts [findExec [lindex $::argv 0]]
+set path [findExec [lindex $::argv 0]]
+
+if {$path eq ""} {
+    exit 2
+} else {
+    puts $path
+}
+
 ----
 
 === `prompt-y-n` - prompts for a yes/no answer
