--- a/README.adoc
+++ b/README.adoc
@@ -2918,6 +2918,7 @@ proc getChoice {history execs} {
     puts -nonewline $fd $history
     puts -nonewline $fd $execs
     flush $fd
+    chan close $fd write
     set res [read $fd]
     catch {close $fd}
     return [string trim $res]
