--- a/README.adoc
+++ b/README.adoc
@@ -2873,7 +2873,7 @@ try {
     array set cmdArgs [::cmdline::getoptions ::argv {
         {history-file.arg "~/.local/app-runner-history" "Application history file"}
         {max-history.arg  256                           "Maximum number of entries in the history"}
-        {prefix.arg       "!@ "                         "String with which each executable is prefixed"}
+        {prefix.arg       "! "                         "String with which each executable is prefixed"}
         {max-depth.arg    10                            "How deep paths from PATHS are traversed"}
     } {[--history-file <app-runner-history>] [--prefix <prefix>]
 
@@ -3302,6 +3302,10 @@ if {$text ne ""} {
         "!!*" {
             set cmd [stripPrefix $text {!!}]
             execl with-env-user [list with-term-emu-sh --pause-after-exec - $cmd]
+        }
+        "!*" {
+            set cmd [stripPrefix $text {!}]
+            execl with-env-user [list bash -c $cmd]
         }
         "tmux :: *" {
             set tmuxSessionName [string trim [stripPrefix $text "tmux :: "]]
