feat: Supports multi-selection @ run-menu

--- a/README.adoc
+++ b/README.adoc
@@ -2827,10 +2827,10 @@ pidof insync >/dev/null 2>&1 || exec insync start
 exec rofi -lines 40 \
 	-width 85 \
 	-i \
+	-multi-select \
 	-font "Cascadia Code 11" \
 	-kb-row-select Tab \
 	-kb-row-tab "" \
-	-kb-accept-alt "" \
 	-kb-row-left "" \
 	-kb-row-right "" \
 	-kb-row-up Super+c,Up,Control+p \
@@ -2838,10 +2838,11 @@ exec rofi -lines 40 \
 	-kb-row-left Super+h,Left,Control+b \
 	-kb-row-right Super+n,Right,Control+f \
 	-kb-move-front Super+d,Control+a \
-	-kb-move-end Super+D,Control+e \
+	-kb-move-end Super+Shift+d,Control+e \
 	-kb-move-word-back Super+g,Alt+b \
 	-kb-move-word-forward Super+r,Alt+f \
 	-kb-accept-custom Shift+Return \
+	-kb-accept-alt Control+Return \
 	"$@"
 
 ----
