fix: No DBus check for do-notify*

--- a/README.adoc
+++ b/README.adoc
@@ -2111,7 +2111,8 @@ ctags "$@" -f "${dir_name_}"/TAGS -R "${dir_name_}"/*
 report-missing-executables notify-send Libnotify || exit 1
 
 echo "$@"
-qdbus org.freedesktop.Notifications &>/dev/null && notify-send "$@"
+# qdbus org.freedesktop.Notifications &>/dev/null && notify-send "$@"
+notify-send "$@"
 
 ----
 
@@ -2126,7 +2127,8 @@ report-missing-executables notify-send Libnotify || exit 1
 
 echo "$@"
 # qdbus org.freedesktop.Notifications &>/dev/null && notify-send -t 2000 "$@"
-qdbus org.freedesktop.Notifications &>/dev/null && notify-send "$@"
+# qdbus org.freedesktop.Notifications &>/dev/null && notify-send "$@"
+notify-send "$@"
 
 ----
 
