feat: Revert key layout for SOFT/RHUF keyboard

--- a/README.adoc
+++ b/README.adoc
@@ -1277,7 +1277,7 @@ set_layout_for_keyboard() {
     fi
 }
 
-set_layout_for_keyboard "SOFT/HRUF Splitography" us
+# set_layout_for_keyboard "SOFT/HRUF Splitography" us
 
 xmodmap
 
