--- a/README.adoc
+++ b/README.adoc
@@ -1693,6 +1693,7 @@ for mouse_ in ${ids_}; do
 
 	{
 		xinput set-prop "${mouse_}" "libinput Natural Scrolling Enabled" 1 &>/dev/null
+		xinput set-prop "${mouse_}" "Coordinate Transformation Matrix" -1 0 1 0 -1 1 0 0 1 &>/dev/null
 	} || {
 		xinput set-prop "${mouse_}" "Evdev Scrolling Distance" -1, -1, 1 &>/dev/null
 		xinput set-prop "${mouse_}" "Evdev Axis Inversion" 1, 1 &>/dev/null
